default/objects/Key_Stakeholder__c/Key_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Key Stakeholder</label>
    <nameField>
        <displayFormat>KS-{0000}</displayFormat>
        <label>Key Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>