default/objects/Key_Stakeholder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Stakeholders</relationshipLabel>
    <relationshipName>Key_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>