default/objects/Key_Stakeholder__c/fields/InfluenceId__c.field-meta.xml
<CustomField>
    <fullName>InfluenceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This influence value is local to the map.  it is used when the chart setting &quot;Use Global Influence and Support Values.&quot; is unchecked.</description>
    <inlineHelpText>This influence value is local to the map.  it is used when the chart setting &quot;Use Global Influence and Support Values.&quot; is unchecked.</inlineHelpText>
    <label>Local Influence</label>
    <referenceTo>pq_Influence__c</referenceTo>
    <relationshipLabel>Key Stakeholders</relationshipLabel>
    <relationshipName>Key_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>