default/objects/Key_Stakeholder__c/fields/ReportsToId__c.field-meta.xml
<CustomField>
    <fullName>ReportsToId__c</fullName>
    <formula>Contact__r.ReportsToId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reports To Id</label>
    <type>Text</type>
</CustomField>