default/objects/Key_Stakeholder__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Support (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Key_Stakeholder_Support</valueSetName>
    </valueSet>
</CustomField>